--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -19,7 +19,7 @@
   <meta name="application-name" content="THE BEST LOGIN APP">
   <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-	<link rel="stylesheet" href="/css/bootstrap.css" />
+	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/style.css" />
 
 	<script type="text/javascript">
