--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -41,7 +41,7 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            {{#if user}}
+            {{#if req.session.user}}
               <li role="presentation"><a href="/">Dashboard</a></li>
               <li role="presentation"><a href="/users/logout">Logout</a></li>
             {{else}}
@@ -50,16 +50,7 @@
             {{/if}}
           </ul>
         </nav>
-        <h3 class="text-muted">MEAN LOGIN</h3>
       </div>
-
-			<div class="row">
-				<div class="col-lg-12">
-					<a href="/users/register" class="thelogo" title="THE BEST LOGIN APP">
-   					<img src="/images/logo.png" alt="THE BEST LOGIN APP" title="THE BEST LOGIN APP" class="text-center" />
-					</a>
-				</div>
-			</div>
 
       <div class="row">
         <div class="col-lg-12">
