--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,21 @@
-<h2 class="page-header">Account Login</h2>
-<form method="post" action="/users/login">
-  <div class="form-group">
-    <label>Username</label>
-    <input type="text" class="form-control" name="username" placeholder="Username">
+<div class="row login">
+  <div class="col-md-6">
+    <h2 class="page-header">Account Login</h2>
+    <form method="post" action="/users/login">
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" class="form-control" name="username" placeholder="Username">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-default">SUBMIT</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password">
+  <div class="col-md-6">
+    <a href="/users/register" class="thelogo" title="THE BEST LOGIN APP">
+      <img src="/images/logo.png" alt="THE BEST LOGIN APP" title="THE BEST LOGIN APP" class="text-center" />
+    </a>
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+</div>
